SonarQube round-2 batch: locals/exceptions/types/Math.clamp cleanup
Round-2 mechanical & low-risk-local fixes spanning rules:
S5993 (abstract ctor->protected), S3740 (raw types -> wildcards/specific),
S2209 (this.STATIC -> Class.STATIC), S6885 (manual clamp -> Math.clamp),
S1192 (dup string -> const), S1319 (collection iface in decls),
kotlin:S6517 (single-fn -> fun interface), S3358 (extract nested
ternary), S112 (generic exception -> specific subtype), S1444
(public static -> static final), plus round-1 stragglers (S1450/S1602/
S1068/S1066).

Generated by parallel sub-agent fleet on a triaged safe-rule
allowlist. Findings with cross-method scope, public-API impact, or
behavior-changing risk (e.g. Math.clamp where bounds could invert,
S1319 widening that would cascade beyond batch boundary) were
skipped. Compile verified (compileBlissWithQuickstepDebugJavaWithJavac
+ compileBlissWithQuickstepDebugKotlin).

Companion submodule commit on libs_systemui a16 (f196767).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>